# Quant

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy.yml
curriculum/: 24-week-roadmap.md  roadmap.json
curriculum/datasets/: real_market_prices.csv
curriculum/week-01/: coverage-audit.md
curriculum/week-02/: plan.md
curriculum/week-03/: plan.md
curriculum/week-05/: plan.md
curriculum/week-06/: plan.md
curriculum/week-08/: plan.md
curriculum/week-12/: plan.md
curriculum/week-13/: plan.md
curriculum/week-14/: plan.md
curriculum/week-15/: plan.md
curriculum/week-16/: plan.md
curriculum/week-18/: plan.md
curriculum/week-20/: plan.md
curriculum/week-21/: plan.md
curriculum/week-22/: plan.md
docs/: README.md  index.html  runtime-config.js
docs/assets/: index-9InnQ1WO.css  index-B6gouJXj.js  index-BQVIWra4.css  index-BS2A6bLA.js  index-B_KGpTHo.js  index-BaMuPf_s.css  index-C41xER8j.js  index-CBdix6XU.css  index-COio_2GX.js  index-CPkaF2t5.css  index-CVyCPWEh.css  index-CgalFaAh.js  index-D12Oh8sC.css  index-DCeX0EN6.js  index-DRWFOnHn.js  index-DhAS6ue8.css  index-Dp389Qgi.css  index-oRkxLDLZ.js  index-sFMNwo_9.js  index-wjkv6xas.js
docs/curriculum/: 24-week-roadmap.md  roadmap.json
docs/references/: career-notes.md  post-change-audit-scoreboard.md  system-flow.md
docs/templates/: daily-completion-checklist.md  error-log-template.md  (+1 more)
exports/: notebook-validation.json
references/: additional-reading.md
site/: .env  .env.example  index.html  package-lock.json  package.json  vite.config.js
site/src/: App.jsx  (+2 more)
(+1654 files in other folders)
